Allow reflective Java access for XStream